--- a/src/MainPage/stylesMainPage.module.css
+++ b/src/MainPage/stylesMainPage.module.css
@@ -24,11 +24,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 90%;
     height: 100%;
     background-color: #F5F5F5;
-    border-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
     box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
+}
+
+.rightContent
+{
+    width: 90%;
+    height: 90%;
 }
 
 .rightTop
