--- a/src/LoginPage/loginStyle.module.css
+++ b/src/LoginPage/loginStyle.module.css
@@ -108,7 +108,13 @@ input[type=radio], .offInput
 	color: #979797;
 }
 
-.icon
+.iconNotification
+{
+	cursor: pointer;
+	box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
+}
+
+.icon, .iconNotification
 {
 	display: flex;
 	align-items: center;
@@ -134,7 +140,7 @@ input[type=radio], .offInput
 	box-shadow: inset 0 0 5px 0 rgba(0,0,0,0.2);
 }
 
-input:checked + .icon
+input:checked + .icon, input:checked + .iconNotification
 {
 	background-color: #FFF;
 	box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
