--- a/src/MainPage/stylesMainPage.module.css
+++ b/src/MainPage/stylesMainPage.module.css
@@ -5,8 +5,8 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    min-width: 800px;
-    min-height: 600px;
+    min-width: 1210px;
+    min-height: 630px;
     color : #444;
 }
 
@@ -85,4 +85,61 @@
     min-width: 460px;
     border-radius: 20px;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.2);
+}
+
+.middleContentRight
+{
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    height: 90%;
+    min-height: 230px;
+    min-width: 460px;
+}
+
+.listElement
+{   display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    color: #797979;
+    font-weight: normal;
+    margin: 10px 0;
+}
+
+
+
+.scrollBar > li
+{
+    border-bottom: 3px solid #DEDEDE;
+}
+
+.scrollBar > li:last-child
+{
+    border-bottom: none;
+}
+
+.scrollBar
+{
+    margin: 0;
+    padding-inline-start: 0;
+    list-style-type: none;
+    overflow-y: scroll;
+}
+
+.scrollBar::-webkit-scrollbar-track
+{
+    background-color: #B3B3B3;
+}
+
+.scrollBar::-webkit-scrollbar
+{
+    width: 5px;
+    background-color: #B3B3B3;
+}
+
+.scrollBar::-webkit-scrollbar-thumb
+{
+    background-color: #4CD5DF;
+    border-radius: 10px;
 }
