--- a/src/MainPage/stylesMainPage.module.css
+++ b/src/MainPage/stylesMainPage.module.css
@@ -135,6 +135,7 @@
 .scrollBar::-webkit-scrollbar
 {
     width: 5px;
+    height: 5px;
     background-color: #B3B3B3;
 }
 
@@ -142,4 +143,29 @@
 {
     background-color: #4CD5DF;
     border-radius: 10px;
+}
+
+.mainBottomList
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    height: 90%;
+    overflow-y: hidden;
+    overflow-x: scroll;
+}
+
+.testBox
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 75%;
+    width: 20%;
+    min-width: 200px;
+    background-color: #F2F2F2;
+    border-radius: 15px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.2);
+    margin: 0 10px;
 }
