--- a/src/LoginPage/loginStyle.module.css
+++ b/src/LoginPage/loginStyle.module.css
@@ -438,3 +438,32 @@ input:checked + .slider:before {
 	justify-content: space-between;
 	align-items: center;
 }
+
+.loading
+{
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	display: flex;
+	z-index: 1;
+	position: fixed;
+	align-items: center;
+	justify-content: center;
+	background-color: rgba(0, 0, 0, 0.5);
+	-webkit-tap-highlight-color: transparent;
+}
+
+.loader {
+	border: 8px solid #f3f3f3; /* Light grey */
+	border-top: 8px solid #43D7E2; /* Blue */
+	border-radius: 50%;
+	width: 60px;
+	height: 60px;
+	animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+}
