--- a/src/MainPage/stylesMainPage.module.css
+++ b/src/MainPage/stylesMainPage.module.css
@@ -47,6 +47,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    position: relative;
     height: 10%;
     width: 100%;
 }
@@ -168,4 +169,33 @@
     border-radius: 15px;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.2);
     margin: 0 10px;
+}
+
+.contextMenu
+{
+    display: flex;
+    padding: 5px 15px;
+    position: absolute;
+    min-width: 200px;
+    background-color: white;
+    border-radius: 10px;
+    top: 75px;
+    right: 0;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.3);
+}
+
+.contextMenuElement
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    margin: 0 0 2px 0;
+    background-color: white;
+}
+
+.contextMenuElement:hover
+{
+    background-color: #E4E4E4;
 }
