--- a/src/LoginPage/loginStyle.module.css
+++ b/src/LoginPage/loginStyle.module.css
@@ -11,7 +11,6 @@ body
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	width: 100vw;
 	height: 100vh;
 }
 
@@ -23,8 +22,7 @@ body
 	height: 75%;
 	border-radius: 20px;
 	box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
-	min-width: 950px;
-	min-height: 590px;
+	min-width: 480px;
 }
 
 .leftColumn
@@ -71,7 +69,26 @@ body
 	background-repeat: no-repeat;
 	background-position: right bottom;
 	width: 80%;
-	height: 80%;
+}
+
+@media only screen and (max-width: 1200px) {
+	.main
+	{
+		height: 100%;
+		width: 100%;
+	}
+	.rightContent
+	{
+		align-items: center;
+		text-align: center;
+	}
+	.leftColumn {
+
+		width: 20%;
+	}
+	.rightColumn {
+		width: 80%;
+	}
 }
 
 .rightInfo
@@ -106,6 +123,13 @@ input[type=radio], .offInput
 	border-radius: 10px;
 	margin: 20px 10px;
 	color: #979797;
+}
+
+.registerForm
+{
+	display: flex;
+	flex-direction: column;
+	width: 80%;
 }
 
 .iconNotification
@@ -290,7 +314,7 @@ input:checked + .icon, input:checked + .iconNotification
 	right: 0;
 	top: 0;
 	bottom: 0;
-	min-width: 500px;
+	min-width: 480px;
 	min-height: 300px;
 	width: 30%;
 	height: 30%;
