--- a/src/MainPage/stylesMainPage.module.css
+++ b/src/MainPage/stylesMainPage.module.css
@@ -2,6 +2,7 @@
 {
     display: flex;
     flex-direction: row;
+    position: relative;
     align-items: center;
     justify-content: center;
     height: 100vh;
@@ -217,7 +218,7 @@
     height: 60%;
 }
 
-@media only screen and (max-width: 1210px) {
+@media only screen and (max-width: 1000px) {
     .rightMiddle
     {
         display: flex;
