--- a/src/MainPage/stylesMainPage.module.css
+++ b/src/MainPage/stylesMainPage.module.css
@@ -186,6 +186,7 @@
 .contextMenu
 {
     display: flex;
+    flex-direction: column;
     padding: 5px 15px;
     position: absolute;
     min-width: 200px;
@@ -193,6 +194,7 @@
     border-radius: 10px;
     top: 75px;
     right: 0;
+    z-index: 1;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.3);
 }
 
