--- a/src/MainPage/styleCalendar.module.css
+++ b/src/MainPage/styleCalendar.module.css
@@ -64,6 +64,7 @@
     background-color: #F2F2F2;
     border-radius: 15px;
     text-align: center;
+    position: relative;
 }
 
 .dayBoxGray
@@ -71,4 +72,24 @@
     background-color: #DDDDDD;
     color: #777777;
     box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
+}
+
+.notBox
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 21px;
+    height: 21px;
+    right: -5px;
+    top: -5px;
+    border-radius: 20px;
+    background-color: #43D7E2;
+    text-align: center;
+}
+
+.currentDay
+{
+    background-color: #43D7E2;
 }
