--- a/src/MainPage/styleCalendar.module.css
+++ b/src/MainPage/styleCalendar.module.css
@@ -1,95 +1,91 @@
-.calendar
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
+.calendar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
-.calendarRightMiddle
-{
-    width: 100%;
-    height: 90%;
+.calendarRightMiddle {
+  width: 100%;
+  height: 90%;
 }
 
-.contentCalendar
-{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 95%;
-    background-color: #EEEEEE;
-    border-radius: 20px;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.2);
-    padding-bottom: 20px;
+.contentCalendar {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 95%;
+  background-color: #eeeeee;
+  border-radius: 20px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
+  padding-bottom: 20px;
 }
 
-.dateBar
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    border-radius: 20px;
-    background-color: #F2F2F2;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.2);
-    margin: 10px 5px;
+.dateBar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-radius: 20px;
+  background-color: #f2f2f2;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
+  margin: 10px 5px;
 }
 
-.dayName
-{
-    text-align: center;
-    justify-content: space-around;
-    grid-column: 1 / 8;
-    display: flex;
-    flex-direction: row;
-    border-radius: 20px;
-    background-color: #F2F2F2;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.2);
-    padding: 10px 0;
-    margin: 15px 0 0 0;
+.dayName {
+  text-align: center;
+  justify-content: space-around;
+  grid-column: 1 / 8;
+  display: flex;
+  flex-direction: row;
+  border-radius: 20px;
+  background-color: #f2f2f2;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
+  padding: 10px 0;
+  margin: 15px 0 0 0;
 }
 
-.calendarPage
-{
-    display: grid;
-    grid-template-columns: auto auto auto auto auto auto auto;
-    grid-gap: 15px;
-    margin: 0 5px;
+.calendarPage {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto auto;
+  grid-gap: 15px;
+  margin: 0 5px;
+  overflow: scroll;
+}
+.calendarPage::-webkit-scrollbar {
+  display: none;
 }
 
-.dayBox, .dayBoxGray
-{
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.2);
-    padding: 10px 0;
-    background-color: #F2F2F2;
-    border-radius: 15px;
-    text-align: center;
-    position: relative;
+.dayBox,
+.dayBoxGray {
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
+  padding: 10px 0;
+  background-color: #f2f2f2;
+  border-radius: 15px;
+  text-align: center;
+  position: relative;
+  cursor: pointer;
 }
 
-.dayBoxGray
-{
-    background-color: #DDDDDD;
-    color: #777777;
-    box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
+.dayBoxGray {
+  background-color: #dddddd;
+  color: #777777;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
 }
 
-.notBox
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    width: 21px;
-    height: 21px;
-    right: -5px;
-    top: -5px;
-    border-radius: 20px;
-    background-color: #43D7E2;
-    text-align: center;
+.notBox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 21px;
+  height: 21px;
+  right: -5px;
+  top: -5px;
+  border-radius: 20px;
+  background-color: #43d7e2;
+  text-align: center;
 }
 
-.currentDay
-{
-    background-color: #43D7E2;
+.currentDay {
+  background-color: #43d7e2;
 }
