--- a/src/MainPage/stylesGroupView.module.css
+++ b/src/MainPage/stylesGroupView.module.css
@@ -153,7 +153,8 @@
   letter-spacing: 1.5px;
   text-transform: uppercase;
   justify-content: flex-end;
-  margin-top: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
   border: none;
   border-radius: 3px;
@@ -195,6 +196,9 @@
 @media only screen and (max-width: 1000px) {
   .groupContainer {
     font-size: 14px;
+  }
+  .postsContainer {
+    padding: 5px 10px;
   }
 }
 
