--- a/src/MainPage/stylesMainPage.module.css
+++ b/src/MainPage/stylesMainPage.module.css
@@ -263,7 +263,7 @@
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   padding-top: 30px;
   left: 0;
   top: 0;
@@ -322,10 +322,11 @@
   display: flex;
   align-items: center;
 }
-/* .addUserToGroup {
+.center {
   display: flex;
-  flex-direction: row;
-} */
+  justify-content: center;
+  align-items: center;
+}
 
 @media only screen and (max-width: 1000px) {
   .rightMiddle {
@@ -361,5 +362,8 @@
   }
   .scrollBar {
     overflow-y: hidden;
+  }
+  .writeGroupName {
+    width: 90% !important;
   }
 }
