--- a/src/MainPage/stylesGroupView.module.css
+++ b/src/MainPage/stylesGroupView.module.css
@@ -4,9 +4,8 @@
   width: 100%;
   min-height: 230px;
   min-width: 460px;
-  height: 80%;
+  height: 100%;
   border-radius: 20px;
-  margin-top: 50px;
   top: 0;
   overflow: scroll;
   font-size: 20px;
@@ -44,6 +43,15 @@
 .dot {
   display: inline-block !important;
   margin-left: 10px;
+}
+
+.topContainer
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+  height: 80%;
 }
 
 .postsContainer {
