--- a/src/MainPage/stylesGroupView.module.css
+++ b/src/MainPage/stylesGroupView.module.css
@@ -71,6 +71,9 @@
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
 }
 .avatar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 30px;
   height: 30px;
   background-color: #979797;
