--- a/src/MainPage/stylesGroupView.module.css
+++ b/src/MainPage/stylesGroupView.module.css
@@ -14,6 +14,18 @@
 .postsContainer::-webkit-scrollbar {
   display: none;
 }
+
+.backColor
+{
+  background-color: #e4e4e4;
+  border-radius: 20px;
+  padding: 10px 20px;
+  height: 55%;
+  overflow: scroll;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
+  margin: 2px;
+}
+
 .groupBox {
   width: 36.5%;
   background-color: #f2f2f2;
@@ -53,6 +65,22 @@
   margin-top: 50px;
   height: 80%;
 }
+
+.postsContainer2
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
+}
+
+.postsContainer2 > input
+{
+  width: 200px;
+  height: 50px;
+  text-align: center;
+}
+
 
 .postsContainer {
   background-color: #e4e4e4;
