--- a/src/MainPage/stylesGroupView.module.css
+++ b/src/MainPage/stylesGroupView.module.css
@@ -81,6 +81,14 @@
   text-align: center;
 }
 
+.schedulContainer
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid black;
+  font-size: 11px;
+}
 
 .postsContainer {
   background-color: #e4e4e4;
