--- a/src/MainPage/stylesGroupView.module.css
+++ b/src/MainPage/stylesGroupView.module.css
@@ -15,6 +15,12 @@
   display: none;
 }
 
+.scheduleCell
+{
+  width: 14.28%;
+  vertical-align: top;
+}
+
 .backColor
 {
   background-color: #e4e4e4;
